<resources>
    <string name="app_name">ChoresManager</string>

<!--    menu bar-->
    <string name="home_title">Home</string>
    <string name="all_chores_title">Chores list</string>
    <string name="add_chore_title">Add chore</string>
    <string name="family_title">Family members</string>

<!--    all chores fragment-->
    <string name="chore_title">Chore title</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete?</string>
    <string name="delete_dialog_pos">Yes</string>
    <string name="delete_dialog_neg">No</string>


<!--    detailed chore fragment-->
    <string name="not_assigned">Chore isn\'t assigned yet</string>
    <string name="spinner_chooser_title">Assign this chore to </string>
    <string name="reward_title">Reward:</string>
    <string name="due_title">Due on</string>
    <string name="complete_chore_title">Mark as completed</string>
    <string name="user_change_title">Apply change</string>
    <string name="chore_completed">Chore completed</string>
    <string name="chore_completed_error">Cannot completed unassigned chore</string>

<!--    add chore fragment-->
    <string name="pick_date_title">Pick due date</string>
    <string name="no_date_picked">You haven\'t picked date yet</string>
    <string name="date_not_picked_title">Error</string>
    <string name="date_not_picked_desc">Due date cannot be empty</string>
    <string name="date_not_picked_ok">OK</string>
    <string name="field_not_null_error">This field cannot be empty</string>
    <string name="add_chore_enter_title">Enter chore title</string>
    <string name="add_chore_desc">Enter chore description</string>
    <string name="add_chore_reward">Enter reward</string>
    <string name="add_chore_finish">Finish</string>

    <!--    userAdapter  -->
    <string name="user_name_title">Name</string>
    <string name="coins_title">Coins:</string>
    <string name="number_of_chores_title">Chores:</string>

<!--    add user fragment-->
    <string name="image_pick_title">Pick image</string>
    <string name="add_member_finish">Add family member</string>
    <string name="first_name_hint">Enter first name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="user_logo_desc">User logo</string>

</resources>