<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp"
    android:backgroundTint="#A6CBE1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/user_img_final"
            android:id="@+id/item_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20sp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/user_name"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            >


            </androidx.appcompat.widget.LinearLayoutCompat>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_chores_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/user_chores"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coins_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/user_num_of_coins"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>